--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
     "name": "telegram-click-game",
     "version": "1.0.0",
     "scripts": {
-      "dev": "parcel src/index.html --port 3000",
-      "build": "parcel build src/index.html --dist-dir dist --public-url ./"
+        "dev": "parcel src/index.html --port 3000",
+        "build": "parcel build src/index.html --dist-dir dist --public-url ./"
     },
     "dependencies": {
-      "phaser": "^3.70.0",
-      "jsonwebtoken": "^9.0.2"
+        "dotenv": "^17.2.2",
+        "jsonwebtoken": "^9.0.2",
+        "phaser": "^3.70.0"
     },
     "devDependencies": {
-      "parcel": "^2.9.3"
+        "parcel": "^2.9.3",
+        "process": "^0.11.10"
     }
-  }
-  
+}
