--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
     "name": "telegram-click-game",
     "version": "1.0.0",
     "scripts": {
-        "dev": "parcel src/index.html --port 3000",
-        "build": "parcel build src/index.html --dist-dir dist --public-url ./"
+        "dev": "parcel src/index.html --port 3000 --no-cache",
+        "build": "parcel build src/index.html --dist-dir dist --public-url ./ --no-cache",
+        "clean": "rmdir /s /q .parcel-cache 2>nul || rmdir /s /q dist 2>nul || echo Cache cleaned"
     },
     "dependencies": {
         "dotenv": "^17.2.2",
