--- a/package.json
+++ b/package.json
@@ -3,16 +3,44 @@
     "version": "1.0.0",
     "scripts": {
         "dev": "parcel src/index.html --port 3000 --no-cache",
-        "build": "parcel build src/index.html --dist-dir dist --public-url ./ --no-cache",
+        "build": "npx parcel build src/index.html --dist-dir dist --no-cache",
+        "vercel-build": "npm run build",
         "clean": "rmdir /s /q .parcel-cache 2>nul || rmdir /s /q dist 2>nul || echo Cache cleaned"
     },
     "dependencies": {
-        "dotenv": "^17.2.2",
+       "@directus/sdk": "^19.1.0",
+		"dotenv": "^16.5.0",
+		"express": "^5.1.0",
+		"phaser3-rex-plugins": "^1.80.16",
+		"socket.io": "^4.8.1",
         "jsonwebtoken": "^9.0.2",
         "phaser": "^3.70.0"
     },
     "devDependencies": {
-        "parcel": "^2.9.3",
-        "process": "^0.11.10"
+        "@babel/core": "^7.10.5",
+		"@babel/plugin-proposal-class-properties": "^7.10.4",
+		"@parcel/packager-raw-url": "^2.15.1",
+		"@parcel/transformer-webmanifest": "^2.15.1",
+		"autoprefixer": "^9.8.8",
+		"babel-eslint": "^10.1.0",
+		"buffer": "^6.0.3",
+		"crypto-browserify": "^3.12.1",
+		"cssnano": "4.1.11",
+		"eslint": "^6.8.0",
+		"minimist": ">=1.2.2",
+		"parcel": "^2.15.1",
+		"parcel-plugin-clean-easy": "^1.0.2",
+		"parcel-plugin-static-files-copy": "^2.4.3",
+		"rimraf": "^6.0.1",
+		"stream-browserify": "^3.0.0",
+		"string_decoder": "^1.3.0",
+		"vm-browserify": "^1.1.2"
+    },
+    "parcelCleanPaths": [
+        "dist"
+    ],
+    "staticFiles": {
+        "staticPath": "public",
+        "watcherGlob": "**"
     }
 }
