--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,13 @@
 {
   "version": 2,
-  "buildCommand": "npm run vercel-build",
-  "outputDirectory": "dist",
   "builds": [
-    { "src": "pages/api/*.js", "use": "@vercel/node" }
+    { "src": "index.html", "use": "@vercel/static" },
+    { "src": "index.js", "use": "@vercel/static" },
+    { "src": "*.js", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/pages/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
+    { "src": "/api/auth", "dest": "/auth.js" },
+    { "src": "/api/claim", "dest": "/claim.js" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
